<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/track_name_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="Scooter" />

    <ImageView
        android:id="@+id/artwork_song"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/album_image"
        android:src="@drawable/artworks_trance" />

    <TextView
        android:id="@+id/time_duration_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/time_duration_song"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/iv_play_active3_song"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/time_duration_song"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/play_button"
        android:src="@drawable/ic_play_circle_outline_black"
        android:visibility="visible" />

    <TextView
        android:id="@+id/artist_name_list_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/track_name_3"
        android:layout_marginStart="40dp"
        android:textSize="12sp"
        tools:text="Fire" />

</RelativeLayout>